# AlgorithmSimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh  run.sh.bak  setupSFML.sh
PathFindingAlgorithmsSrc/: AStar.cpp  BreadthFirstSearch.cpp  DepthFirstSearch.cpp  Dijkstra.cpp
SortingAlgorithmsSrc/: BubbleSort.cpp  HeapSort.cpp  InsertionSort.cpp  MergeSort.cpp  QuickSort.cpp  SelectionSort.cpp
include/: Algorithms.h  Interface.h  PathFindingAlgorithms.h  SortingAlgorithms.h
src/: Algorithms.cpp  Interface.cpp  Main.cpp
unit-tests/: testing.cpp
unit-tests/PathFindingAlgorithms/: AStar.hpp  BreadthFirstSearch.hpp  DepthFirstSearch.hpp  Dijkstra.hpp
unit-tests/SortingAlgorithms/: BubbleSort.hpp  HeapSort.h  InsertionSort.h  InsertionSort.hpp  MergeSort.h  MergeSort.hpp  QuickSort.h  QuickSort.hpp  SelectionSort.h  SelectionSort.hpp
